# nprompter

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  404.html  Makefile  changelog.md  create-integration.md  index.html  mkdocs.yaml  pyproject.toml  readme.md  release.sh
.github/workflows/: pr.yml  refresh-demo-website.yml  release.yml  test-release.yml
configuring-notion/create-database/: index.html
configuring-notion/create-integration/: index.html
deploy_examples/netlify/: netlify.toml  requirements.txt
docs/: conf.py  index.md  index.rst
docs/nprompter/: alternatives.md  configuration-file.md  multi-database-support.md  usage.md
docs/source/: alternatives.md  browser-options.md  configuration-file.md  create-database.md  create-integration.md  create-teleprompter.md  usage.md
nprompt/api/: notion_client.py
nprompt/processing/: processor.py
nprompter/: __init__.py  __main__.py
nprompter/alternatives/: index.html
nprompter/api/: notion_client.py
nprompter/cli/: defaults.py  helpers.py  output.py
nprompter/configuration-file/: index.html
nprompter/create-teleprompter/: index.html
nprompter/multi-database-support/: index.html
nprompter/processing/: processor.py
nprompter/usage/: index.html
nprompter/web/: config.toml  nprompter.toml
nprompter/web/assets/: app.js  nprompter.css  script.js
nprompter/web/templates/: base.html  database_index.html  global_index.html  index.html  manifest.json  nprompter.css  script.html  script.js  service-worker.js  settings.js
search/: search_index.json
tests/: test_build.py  test_commits.py  test_config_file.py
utils/: validate_conventional_commits.py
