[tool.poetry]
name = "nprompter"
version = "2.0.0"
description = "A web based teleprompter that uses Notion as a storage backend"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
nprompter = 'nprompter.__main__:app'


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
Jinja2 = "^3.1.2"
python-slugify = "^6.1.2"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
