[tool.poetry]
name = "nprompter"
version = "3.0.0"
description = "A web based teleprompter that uses Notion as a storage backend"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
nprompter = 'nprompter.__main__:app'


[tool.poetry.dependencies]
Jinja2 = "^3.1.2"
python = "^3.8"
python-slugify = "^6.1.2"
requests = "^2.28.0"
tomli = "^2.0.1"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
Sphinx = "^5.2.3"
black = "^22.3.0"
bump2version = "^1.0.1"
isort = "^5.10.1"
pyproject-flake8 = "^0.0.1-alpha.4"
pytest = "^7.1.3"
myst-parser = "^0.18.1"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv         # root of the project
    | dist           # root of the project
  )/
)
'''

[tool.flake8]
max-line-length = 120
per-file-ignores = []
exclude = [".content", "dist"]

[tool.isort]
skip_glob = [".content", "dist"]
# Structure
default_section = "THIRDPARTY"
known_first_party = "notion-scripting"
# Import Style
line_length = 120
force_grid_wrap = false
use_parentheses = true
include_trailing_comma = true
combine_as_imports = true
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
