[project]
name = "nprompter"
version = "4.3.0"
description = "A web based teleprompter that uses Notion as a storage backend"
authors = [
    { name = "Antonio Feregrino", email = "antonio.feregrino@gmail.com" }
]
license = "MIT"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "python-slugify>=8.0.4",
    "requests>=2.32.5",
    "tomli>=2.2.1",
    "typer>=0.19.2",
]

[project.scripts]
nprompter = "nprompter.__main__:app"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.2",
    "black>=25.9.0",
    "bump2version>=1.0.1",
    "commitizen>=4.9.1",
    "isort>=6.1.0",
    "mkdocs-material>=9.6.21",
    "myst-parser>=4.0.1",
    "pyproject-flake8>=7.0.0",
    "pytest>=8.4.2",
]

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv         # root of the project
    | dist           # root of the project
  )/
)
'''

[tool.flake8]
max-line-length = 120
per-file-ignores = []
exclude = [".venv", ".content", "dist"]

[tool.isort]
skip_glob = [".content", "dist"]
# Structure
default_section = "THIRDPARTY"
known_first_party = "nprompter"
# Import Style
line_length = 120
force_grid_wrap = false
use_parentheses = true
include_trailing_comma = true
combine_as_imports = true
multi_line_output = 3

[tool.uv.build-backend]
module-root = "."
module-name = "nprompter"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
